<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Rumah Soto</string>
    <string name="choose_a_dessert">Silahkan Pilih Pesanan Anda !!!</string>
    <string name="donuts">Soto Lamongan Adalah Soto yang berasal dari Lamongan bercita rasa khas lamongan</string>
    <string name="ice_cream_sandwiches">Soto Ayam berasal dari ayam kampung pilihan yang sehat dan diproses secara halal</string>
    <string name="froyo">Soto Kikil yang dibuat dengan Kikil sapi import pilihan</string>
    <string name="donut_order_message">Pesananmu Adalah Soto Lamongan</string>
    <string name="ice_cream_order_message">Pesananmu Adalah Soto Ayam</string>
    <string name="froyo_order_message">Pesananmu Adalah Soto Kikil</string>
    <string name="choose_a_delivery_method">Choose a Delivery method</string>
    <string name="same_day_mesanger_services">Same day mesanger services</string>
    <string name="next_day_messanger_services">Next day messenger services</string>
    <string name="pick_up">Pick Up</string>
    <string name="chosen">Chosen: </string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked</string>
    <string name="same_day_messenger_service">Same day messenger services</string>
    <string name="next_day_ground_delivery">Next day ground delivered</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You	selected	Order.</string>
    <string name="action_status_message">You	selected	Status.</string>
    <string name="action_favorites_message">You	selected	Favorites.</string>
    <string name="action_contact_message">You	selected	Contact.</string>
    <string name="google_mtv_coord_zoom12">geo:37.422114,-122.086744?z=12</string>
    <string name="soto_lamongan">Soto Lamongan</string>
    <string name="soto_ayam">Soto Ayam</string>
    <string name="soto_kikil">Soto Kikil</string>
    <string name="soto_uhuy">Soto Maknyus</string>
    <string name="uhuy">Soto Maknyus yang bercita rasa Soto modern namun tetap nikmat</string>
    <string name="text_header">Soto Lamongan Adalah Soto yang berasal dari Jawa Timur yaitu tepatya dibagian lamongan. Namun Soto lamongan Banyak ditemui diberbagai daerah di indonesia.</string>
    <string name="uhuy_order_message">Pesananmu Adalah Soto Uhuy</string>
    <string name="text_header1">Soto MAknyus Adalah Soto Fariasi Terbaru Dari restoran Rumah Soto</string>
    <string name="text_header3">Soto Ayam Adalah Soto yang terbuat Dari Ayam Kampung Pilihan Yang sehat dan diproses secara Halal</string>
    <string name="text_header4">Soto ikil Termasuk Soto denga Variant rasa terbaru yang baru dirilis restoran Rumah Soto</string>
</resources>
