<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"/>
    <TextView
        android:id="@+id/choose_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textintro"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_dessert"/>
    <TextView
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_desert"
        android:contentDescription="@string/donuts"
        android:onClick="showDonutOrder"
        android:padding="@dimen/padding_regular"
        android:text="@string/soto_lamongan"/>
    <TextView
        android:id="@+id/ketdonuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/donut"
        android:text="@string/donuts"/>
    <TextView
        android:id="@+id/ice_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/ketdonuts"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:onClick="showIceCreamOrder"
        android:text="@string/soto_ayam"/>
    <TextView
        android:id="@+id/keticecream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/ice_cream"
        android:text="@string/ice_cream_sandwiches"/>
    <TextView
        android:id="@+id/froyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/keticecream"
        android:contentDescription="@string/froyo"
        android:onClick="showFroyoOrder"
        android:text="@string/soto_kikil"/>
    <TextView
        android:id="@+id/ketfroyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/froyo"
        android:text="@string/froyo"/>
    <TextView
        android:id="@+id/sotouhuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/ketfroyo"
        android:contentDescription="@string/uhuy"
        android:onClick="showUhuyOrder"
        android:text="@string/soto_uhuy"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/sotouhuy"
        android:text="@string/uhuy"/>
</RelativeLayout>